/*
    This .proto file defines the format of the communication done using RPC
    The same file has to be used on the server and on the clients.

    For simplicity, that file is directly copied in both projects, but it
    should be shared using a better way.
*/

syntax = "proto3";

// If not specified, all the code generated by the plugin, will be in a single file
option java_multiple_files = true;


option java_package = "com.dnchia.grpc";
option java_outer_classname = "CalculatorProto";

package com.dnchia.grpc;

// The greeting service definition.
service CalculatorService {
    // Sends a greeting
    rpc Calculator (CalculatorRequest) returns (CalculatorResponse);
}

message CalculatorRequest {
    float operand1 = 1;
    string operator = 2;
    float operand2 = 3;
}

message CalculatorResponse {
    string result = 1;
}